# Vocard

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  function.py  main.py  pyproject.toml  requirements.txt  settings Example.json  update.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docker-image.yml
.idx/: dev.nix
addons/: __init__.py  lyrics.py  placeholders.py  settings.py
cogs/: basic.py  effect.py  listeners.py  playlist.py  settings.py  task.py
ipc/: __init__.py  client.py  methods.py
langs/: CH.json  DE.json  ES.json  JA.json  KO.json  PL.json  UA.json
lavalink/: application.yml
local_langs/: zh-TW.json
views/: __init__.py  controller.py  debug.py  embedBuilder.py  help.py  inbox.py  link.py  list.py  lyrics.py  playlist.py  search.py
voicelink/: __init__.py  enums.py  events.py  exceptions.py  filters.py  objects.py  placeholders.py  player.py  pool.py  queue.py  ratelimit.py  transformer.py  utils.py
