[project]
name = "vocard"
version = "0.1.0"
description = "Vocard is a simple music bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.11.12",
    "beautifulsoup4==4.11.1",
    "discord-py==2.5.2",
    "dnspython==2.2.1",
    "humanize==4.0.0",
    "motor==3.6.0",
    "psutil==5.9.8",
    "tldextract==3.2.1",
    "validators==0.18.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
]
