[project]
name = "vocard"
version = "2.8.0-beta.0"
description = "Vocard is a simple music bot."
readme = "README.md"
authors = [
    { name="ChocoMeow" },
    { name="Keksi", email="hello@keksi.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.11.12",
    "beautifulsoup4==4.11.1",
    "discord-py==2.5.2",
    "dnspython==2.2.1",
    "humanize==4.0.0",
    "motor==3.6.0",
    "psutil==5.9.8",
    "tldextract==3.2.1",
    "validators==0.18.2",
]

[dependency-groups]
dev = [
    "poethepoet>=0.36.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
    "ty>=0.0.1a14",
]

[tool.poe.tasks]
pre-commit = "uv run pre-commit"
start = "uv run python -u main.py"
lint = "uv run ruff check ."
fmt = "uv run ruff format ."
check = "uv run ty check"
