[project]
name = "vocard"
version = "2.8.0-beta.0"
description = "Vocard is a simple music bot."
readme = "README.md"
authors = [
    { name="ChocoMeow" },
    { name="Keksi", email="hello@keksi.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.11.12",
    "beautifulsoup4==4.11.1",
    "discord-py==2.5.2",
    "dnspython==2.2.1",
    "humanize==4.0.0",
    "motor==3.6.0",
    "psutil==5.9.8",
    "tldextract==3.2.1",
    "validators==0.18.2",
]

[dependency-groups]
dev = [
    "poethepoet>=0.36.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
    "ty>=0.0.1a14",
]

[tool.poe.tasks]
pre-commit = "uv run pre-commit"
start = "uv run python -u main.py"
lint = "uv run ruff check ."
fmt = "uv run ruff format ."
check = "uv run ty check"

[tool.ruff]
fix = true
line-length = 120
target-version = "py312"
extend-exclude = [".cache"]
output-format = "concise"
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PLC",  # pylint convention
    "PLE",  # pylint errors
    "PLR",  # pylint refactor
    "PLW",  # pylint warnings
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff specific rules
    "S",    # bandit
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
    "W",    # pycodestyle
]
ignore = [
    # Type Annotations
    "ANN002","ANN003","ANN204","ANN206","ANN401",

    # pseudo-random generators
    "S311",

    # magic values
    "PLR2004",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.isort]
lines-after-imports = 2
order-by-type = false
case-sensitive = true
combine-as-imports = true